--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>threejs</title>
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <canvas id="canvas"> </canvas>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/mainPhysics.js"></script>
   </body>
 </html>
